# viscii_codec

./: LICENSE  LICENSE.md  README.md  pyproject.toml  test_codec.py  viscii_codec.py
.github/: dependabot.yml
.github/workflows/: draft-release.yml  tests.yml
